# uqal-core

./: .env.example  .gitignore  README.md  SECURITY.md  hr_schema.uqal  pyproject.toml  uqal_config.example.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml
scripts/dev/: check_query.py  debug_create_view.py  debug_grammar_builder.py  debug_neo4j_grammar.py  debug_neo4j_rel_props.py  debug_transformer.py  debug_tree.py  inspect_grammar.py  test_multi_module_grammar.py  test_sql_grammar.py  validate_module.py
src/uqal_core/: engine.py  module_interface.py  module_loader.py  types.py
src/uqal_core/ast/: condition_registry.py  module_nodes.py  nodes.py  transformer.py
src/uqal_core/cache/: cache_manager.py
src/uqal_core/cli/: main.py
src/uqal_core/config/: config_manager.py  connection_schema.py  loader.py
src/uqal_core/execution/: executor.py  result_set.py
src/uqal_core/parser/: base_grammar.lark  grammar_builder.py
src/uqal_core/planner/: query_planner.py
tests/: conftest.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_cli.py  test_module_compliance.py  test_module_loader.py
tests/unit/: test_config_manager.py  test_create_view.py  test_executor.py  test_executor_output.py  test_module_nodes.py  test_mongodb_module.py  test_neo4j_module.py  test_neo4j_rel_traversal.py  test_neo4j_translator.py  test_output_format.py  test_planner.py  test_result_set.py  test_schema_store.py  test_transformer.py  test_typecheck.py  test_types.py
(+44 files in other folders)
